deployment.yml
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: springboot-k8s-mysql
spec:                
  selector:  #identify a set of objects.        
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 3        
  template:
    metadata:
      labels:        
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-k8s-mysql
          image: prathm6601/k8mysql:spring
          ports:
            - containerPort: 8080
