ingress.yml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: example-ingress
   
  annotations:
   
    nginx.ingress.kubernetes.io/rewrite-target: /users    #ex. 10.10.50.40/users
   
spec:
   
  rules:
   
    - host: www.springwithmysql.com
   
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix  #matching purpose- case sensitive
   
            backend:
   
              service:
   
                name: springboot-k8s-mysql
   
                port:
   
                  number: 8080
